<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Demos</string>
    <string name="action_settings">Settings</string>
    
    <string name="LOG_TAG">Demos</string>
 
    <!-- Demo: Life Cycle Test -->
    <string name="demo_life_cycle_test_label">Life Cycle Test</string>
    
	<!-- Demo: Game Loop Test -->    
	<string name="demo_game_loop_test_label">Game Loop Test</string>    
    
    <!-- Demo: Single Touch Test -->    
    <string name="demo_single_touch_test_label">Single Touch Test</string>
	<string name="single_touch_test_X_loc_label">X: </string>
	<string name="single_touch_test_Y_loc_label">Y: </string>
	<string name="single_touch_test_event_toucharea_text">Touch here</string>
        
	<!-- Demo: Multi Touch Test -->
	<string name="demo_multi_touch_test_label">Multi Touch Test</string>
	<string name="multi_touch_test_X_locs_label">X Locations</string>
	<string name="multi_touch_test_Y_locs_label">Y Locations</string>
	<string name="multi_touch_test_event_toucharea_text">Touch here</string>		

	<!-- Demo: Key Test -->
	<string name="demo_key_test_label">Key Test</string>	
	<string name="key_test_edittext_text">Type something</string>
		
	<!-- Demo Accelerometer Test -->
	<string name="demo_accelerometer_test_label">Accelerometer Test</string>
	<string name="accelerometer_test_x_accel_text">X Accel:</string>
	<string name="accelerometer_test_y_accel_text">Y Accel:</string>
	<string name="accelerometer_test_z_accel_text">Z Accel:</string>
	<string name="accelerometer_test_compass_text">Compass:</string>
			
	<!-- Demo Assets Test -->
	<string name="demo_assets_test_label">Assets Test</string>
	<string name="demo_assets_test_bitmapInfo">Loaded bitmap</string>
	
	<!-- Demo External Storage Test -->
	<string name="demo_external_storage_test_label">External Storage Test</string>
	
	<!-- Demo Shared Preferences Test -->
	<string name="demo_shared_preferences_test_label">Shared Preferences Test</string>
	<string name="shared_preferences_edittext_hint">Enter score</string>
		
	<!-- Demo Sound Pool Test -->
	<string name="demo_sound_pool_test_label">Sound Pool Test</string>
	<string name="sound_pool_test_textview_text">Tap screen to trigger explosion!</string>
	
	<!-- Demo Media Player Test -->
	<string name="demo_media_player_test_label">Media Player Test</string>
	<string name="media_player_test_textview_text">Now playing some music&#8230;</string>

	<!-- Demo Shape Test -->
	<string name="demo_shape_test_label">Shape Test</string>

	<!--  Demo Bitmap Test -->
	<string name="demo_bitmap_test_label">Bitmap Test</string>
		
	<!-- Demo SurfaceView Test -->
	<string name="demo_surfaceview_test_label">SurfaceView Test</string>
	
	<!-- Demo TextureView Test -->
	<string name="demo_texturevuew_test_label">TextureView Test</string>
	
	<!-- Demo CanvasThread Test -->
	<string name="demo_canvasthread_test_label">CanvasThread Test</string>

	<!-- Demo Viewport Test -->
	<string name="demo_viewport_test_label">Viewport Test</string>	
	
	<!-- Demo Ribbon Test -->
	<string name="demo_ribbon_test_label">Ribbon Test</string>		

	<!-- Demo Animation Test -->
	<string name="demo_animation_test_label">Animation Test</string>		
			
	<!-- Demo Animation Test -->
	<string name="demo_particle_system_label">Particle System Demo</string>		
	
</resources>
